--- a/packages/store-recording/src/App.css
+++ b/packages/store-recording/src/App.css
@@ -1,5 +1,5 @@
 :root {
-  --mainBlue: #2a2a72;
+  --mainBlue: #832809;
   --lightBlue: #009ffd;
   --mainWhite: #f3f3f3;
   --mainDark: #232528;
@@ -7,13 +7,13 @@
 }
 
 body {
+  background: linear-gradient(0deg, rgba(110,23,4,1) 0%, rgba(207,103,28,1) 100%);
   font-family: "Oswald", sans-serif !important;
-  background: var(--mainWhite) !important;
   color: var(--mainBlue) !important;
 }
 
 .text-title {
-  font-family: 'Permanent Marker', cursive;
+  font-family: Merriweather,sans-serif, cursive;
   letter-spacing: 0.3rem;
   text-transform: uppercase;
 }
@@ -22,8 +22,16 @@ body {
   color: var(--mainBlue);
 }
 
+.text-white {
+  color: var(--mainWhite);
+}
+
 .text-bright {
   color: var(--lightBlue);
+}
+
+.back-white {
+  background: var(--mainWhite);
 }
 
 .btn-black {
